catkin_ws/logs/iq_gnc/build.make.030.log.stderr
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:13:18: error: expected ‘,’ or ‘;’ before ‘:’ token
   13 | bool flag = false:
      |                  ^
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘int main(int, char**)’:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:42:18: error: conflicting declaration ‘ros::Subscriber drone1Pos’
   42 |  ros::Subscriber drone1Pos;
      |                  ^~~~~~~~~
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:40:18: note: previous declaration as ‘ros::NodeHandle drone1Pos’
   40 |  ros::NodeHandle drone1Pos;
      |                  ^~~~~~~~~
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:70:105: error: ‘drone1_pos_cb’ was not declared in this scope; did you mean ‘drone1_psi’?
   70 |     drone1Pos = gnc_node.subscribe<geometry_msgs::PoseStamped>("/drone1/mavros/local_position/pose", 1, drone1_pos_cb);
      |                                                                                                         ^~~~~~~~~~~~~
      |                                                                                                         drone1_psi
In file included from /opt/ros/noetic/include/ros/ros.h:40,
                 from /home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:9,
                 from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:73:64: error: ‘ros_namespace’ was not declared in this scope
   73 |   ROS_INFO("%s : Drone1 local position: x: %f , y: %f, z: %f", ros_namespace.c_str(), drone1_x, drone1_y, drone1_z);
      |                                                                ^~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:351:165: note: in definition of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
  351 |     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
      |                                                                                                                                                                     ^~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:390:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
  390 |       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:575:35: note: in expansion of macro ‘ROS_LOG_COND’
  575 | #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
      |                                   ^~~~~~~~~~~~
/opt/ros/noetic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
  110 | #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
      |                       ^~~~~~~
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:73:3: note: in expansion of macro ‘ROS_INFO’
   73 |   ROS_INFO("%s : Drone1 local position: x: %f , y: %f, z: %f", ros_namespace.c_str(), drone1_x, drone1_y, drone1_z);
      |   ^~~~~~~~
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1949: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
